--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,6 +132,17 @@ body{
     transition: background-color .2s ease-in-out;
 }
 
+.card > .background > .mask{
+    width: 100%;
+    height: 100%;
+    border-radius: var(--card-radius);
+    transition: background-color .2s ease-in-out;
+    background-color: rgba(0,0,0,.2);
+    -webkit-mask-image: url(/assets/images/others/card-mask.png);
+    -webkit-mask-size: cover;
+    mask-image: url(/assets/images/others/card-mask.png);   
+}
+
 .card > .content{
     position: relative;
     display: grid;
