Para despliegue en githubpages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family:'Nikumaru';
-    src: url(/assets/fonts/nikumaru.otf);
+    src: url(/jankencard/assets/fonts/nikumaru.otf);
 }
 
 :root{
