--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,8 +30,8 @@
     --card-sky-a: #9ac8cb;
     --card-sky-b: #709aa3;
 
-    --card-gray-a: #8b7f7a;
-    --card-gray-b: #6c5855;
+    --card-gray-a: #b7c3a3;
+    --card-gray-b: #6d6e5e;
 
     --card-green-a: #8c9f80;
     --card-green-b: #5f856f;
@@ -89,6 +89,11 @@ body{
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
     background-color: #4cbcf8;
+    overflow: hidden;
+}
+
+.container > canvas{
+    position: absolute;
 }
 
 .card{
@@ -137,6 +142,8 @@ body{
     width: 100%;
     height: 100%;
     background-size: cover;
+    background-color: white;
+    opacity: 0.25;
 }
 
 .card > .content{
@@ -207,6 +214,7 @@ body{
     display: grid;
     gap: 10px;
     position: absolute;
+    z-index: 2;
 }
 
 .card > .content > .body > .stats > [data-stat]{
