--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,7 +106,12 @@ body{
     padding: var(--card-padding);
     margin: 0px 20px;
     background-color: var(--white);
+    box-shadow: 0px 10px 10px rgba(0,0,0,.4);
     transition: transform 0.2s ease-in-out;
+}
+
+.card.show{
+    animation: cardShow .5s forwards ease-out;
 }
 
 .card .text{
@@ -340,18 +345,6 @@ body{
     pointer-events: none;
 }
 
-@media (max-width: 540px) {
-    .card{
-        transform: scale(.7);
-    }
-}
-
-@media (max-width: 380px) {
-    .card{
-        transform: scale(.6);
-    }
-}
-
 /* Actions */
 .actions{
     display: grid;
@@ -373,4 +366,50 @@ body{
     border-radius: var(--card-padding) var(--card-radius) 0px 0px;
     cursor: pointer;
     user-select: none;
+}
+
+
+@keyframes cardShow {
+    from{
+        opacity: 0;
+        transform: rotate(8deg) translate(100px,10px);
+    }
+    to{
+        opacity: 1;
+        transform: rotate(0deg) translate(0px,0px);
+    }
+}
+
+@media (max-width: 540px) {
+    .card{
+        transform: scale(.7);
+    }
+
+    @keyframes cardShow {
+        from{
+            opacity: 0;
+            transform: scale(.7) rotate(8deg) translate(100px,10px);
+        }
+        to{
+            opacity: 1;
+            transform: scale(.7) rotate(0deg) translate(0px,0px);
+        }
+    }
+}
+
+@media (max-width: 380px) {
+    .card{
+        transform: scale(.6);
+    }
+
+    @keyframes cardShow {
+        from{
+            opacity: 0;
+            transform: scale(.6) rotate(8deg) translate(100px,10px);
+        }
+        to{
+            opacity: 1;
+            transform: scale(.6) rotate(0deg) translate(0px,0px);
+        }
+    }
 }
