Todos los personajes incluidos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -190,6 +190,10 @@ body{
     z-index: 2;
 }
 
+.card > .content > .header > .name > input::placeholder{
+    color: var(--white);
+}
+
 .card > .content > .header > .name > input:focus{
     outline: none;
 }
