Metodo para desactivar vantas en background

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,7 +191,7 @@ body{
 }
 
 .card > .content > .header > .name > input::placeholder{
-    color: var(--white);
+    color: var(--blue);
 }
 
 .card > .content > .header > .name > input:focus{
