--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -267,6 +267,12 @@ body{
     height: 28px;
     background-repeat: no-repeat;
     background-size: cover;
+    transition: transform 0.1s ease-in-out, filter 0.1s ease-in-out;
+}
+
+.card > .content > .body > .stats > [data-stat]:active > .changers *{
+    transform: scale(.9);
+    filter: brightness(1.1);
 }
 
 .card > .content > .body > .stats > [data-stat=rock] > .icon{
@@ -360,20 +366,27 @@ body{
     gap: 20px;
     justify-content: center;
     position: fixed;
-    bottom: 0;
+    bottom: 20px;
     left: 0;
     right: 0;
 }
 
-.button{
+.actions > *{
     display: grid;
-    padding: var(--card-padding) 50px;
-    background-color: var(--blue);
-    border: 4px solid var(--white);
-    border-bottom: none;
-    border-radius: var(--card-padding) var(--card-radius) 0px 0px;
     cursor: pointer;
+    transition: transform 0.1s ease-in-out, filter 0.1s ease-in-out;
     user-select: none;
+    -webkit-tap-highlight-color:transparent;
+}
+
+.actions > *:active{
+    transform: scale(.9);
+    filter: brightness(1.1);
+}
+
+.actions > [data-action=prev], .actions > [data-action=next]{
+    width: 100px;
+    height: 72px;
 }
 
 @keyframes cardShow {
